# Graphics_Project

./: .gitignore  CMakeLists.txt  animationData.cpp  animationData.h  bot.vert  city.cpp  city.h  city_layout.txt  deferredShader.cpp  deferredShader.h  entity.cpp  entity.h  geometry.cpp  geometry.h  lab4_character.cpp  light.cpp  light.h  primitives.cpp  primitives.h  readme.md  skybox.cpp  skybox.h  test_scene.cpp  test_scene.h  utilities.cpp  utilities.h
assets/models/buildings/: source.txt
assets/models/drone/: source.txt
assets/models/lowPolyHuman/: Man.mtl  ManOneTimelineAnim.fbx  ManUnity.fbx  source.txt
assets/models/streetlight/: StreetLamp.fbx  source.txt
assets/skybox/daytime/: source.txt
assets/skybox/night/: source.txt
assets/textures/concrete/: source.txt
assets/textures/road/: source.txt
lab4/: lab4_character.cpp  lab4_skeleton.cpp
lab4/render/: shader.cpp  shader.h
lab4/shader/: bot.vert
render/: shader.cpp  shader.h
shaders/: entity.frag  entity.vert  entityAnimated.frag  entityAnimated.vert  geometry.frag  geometry.vert  lighting.frag  lighting.vert  shadowEntity.vert  shadowMap.frag  shadowMap.vert  skybox.frag  skybox.vert  sunShadowEntity.vert  sunShadowMap.vert  sunlighting.frag
